fix: TransactionDetail / Add flex-wrap to tags #176

--- a/client/src/components/Budget/Transaction/TransactionDetail.module.css
+++ b/client/src/components/Budget/Transaction/TransactionDetail.module.css
@@ -55,6 +55,7 @@
 .tags {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top: 2vh;
 }
 
